--- a/snips-nlu-ffi/Cargo.toml
+++ b/snips-nlu-ffi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snips-nlu-ffi"
-version = "0.62.0-SNAPSHOT"
+version = "0.18.0"
 authors = [
     "Adrien Ball <adrien.ball@snips.ai>",
     "Clement Doumouro <clement.doumouro@snips.ai>",
