--- a/snips-nlu-lib/Cargo.toml
+++ b/snips-nlu-lib/Cargo.toml
@@ -13,8 +13,8 @@ edition = "2018"
 
 [dependencies]
 crfsuite = { git = "https://github.com/snipsco/crfsuite-rs", rev = "91fda4b" }
-snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.62.0" }
-snips-nlu-ontology-parsers = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.62.0" }
+snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", branch = "develop" }
+snips-nlu-ontology-parsers = { git = "https://github.com/snipsco/snips-nlu-ontology", branch = "develop" }
 snips-nlu-utils = { git = "https://github.com/snipsco/snips-nlu-utils", tag = "0.7.1" }
 failure = "0.1"
 base64 = "0.9"
